# pihole-influx-agent

./: Cargo.toml  Readme.md  config.yaml  systemd.service  template.json
.github/workflows/: build.yml  release.yml  test.yml
src/: client.rs  config.rs  influx.rs  main.rs  pihole.rs  summary.rs
