[package]
name = "pihole-influx-agent"
version = "0.1.0"
edition = "2021"

license = "AGPL-3.0-only"
description = "Publish PiHole metrics to InfluxDB. Supports Influx's V2 API."
repository = "https://github.com/bohrium272/pihole-influx-agent"
readme = "Readme.md"
keywords = ["pihole", "influxdb", "telemetry", "monitoring"]
categories = ["visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sys-info = "0.9"
log = "0.4.14"
env_logger = "0.8.4"

[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

# Pi 2/3/4
[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-linux-gnueabihf-gcc"
